--- a/html/multiplas-telas/style.css
+++ b/html/multiplas-telas/style.css
@@ -1,56 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script&display=swap');
 
-body{
-    background-color: blueviolet;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.5em;
-}
-
-main{
-    background-color: white;
-    max-width: 500px;
-    padding: 15px;
-    margin: 30px auto;
-    border-radius: 10px;
-}
-h1{
-    font-family: 'Bebas Neue', cursive;
-    font-size: 3em;
-}
-p{
-    font-family: 'Dancing Script', cursive;
-    font-size: 1.5em;
-    line-height: 1.5em;
-}
-/* Para celular */
-@media screen and (max-width: 500px){
-   body{
-    background-image: url("imagens/wallcelular.jpg");
-   } 
-   main{
-    background-color: beige;
-   }
-}
-/* para tablet */
-@media screen and (min-width: 501px) and (max-width: 800px){
-    body{
-        background-image: url("imagens/walltablet.jpg");
-       }
-       main{
-        background-color: aliceblue;
-       }
-}
-/* para desktop */
-@media screen and (min-width: 801px){
-    body{
-        background-image: url("imagens/walldesktop.jpg");
-       } 
-       main{
-        background-color: floralwhite;
-       }
-}
+/* Fonte: bebas neue*/
+/* Tamanhos background < 500px / > 501px < 800px / > 801px */
